# Wolfenstein3DFromSource

./: .gitignore  .travis.yml  README.md  Wolfenstein3DFromSource-Info.plist  Wolfenstein3DFromSource.exp  Wolfenstein3DFromSourceAppDelegate.h  Wolfenstein3DFromSourceAppDelegate.m  Wolfenstein3DFromSource_Prefix.pch  main.m
English.lproj/: MainMenu.xib
wolf3dredux_0.01/: .gitignore  Makefile.am  Makefile.in  README.TXT  XSyms.txt  aclocal.m4  config.h.in  configure  configure.ac  configure.scan  ebg_my_preprocessor_defines_snowleopard.h  makefile.freebsd  makefile.orig  wolf3dredux.cbp  wolf3dredux.sln  wolf3dredux.vcproj
wolf3dredux_0.01/Release/: .gitignore
wolf3dredux_0.01/client/: client.h  client_input.c  client_main.c  client_screen.c  console.c  console.h  keys.c  keys.h  menu_conf.c  menu_conf.h
wolf3dredux_0.01/common/: arch.c  arch.h  cmd.c  cmd.h  common.c  common.h  common_utils.h  cvar.c  cvar.h  num_type.h  share.c  ttree.c  ttree.h
wolf3dredux_0.01/device/cpu/: cpuid.c  processor.h
wolf3dredux_0.01/device/filesys/: fileio.c  filelink.h  files.c  filestring.c  filestring.h  filesystem.h  zippak.c  zippak.h
wolf3dredux_0.01/device/filesys/unix/: glob.c  glob.h  unix_file.c
wolf3dredux_0.01/device/filesys/win32/: win_file.c
wolf3dredux_0.01/device/input/: in_view.c  input.h
wolf3dredux_0.01/device/input/unix/: unix_joystick.c  unix_keys.c  unix_mouse.c
wolf3dredux_0.01/device/input/win32/: win_joystick.c  win_keys.c  win_mouse.c
wolf3dredux_0.01/device/system/: system.c  system.h
wolf3dredux_0.01/device/system/unix/: unix_system.c
wolf3dredux_0.01/device/system/win32/: win_system.c
wolf3dredux_0.01/device/timer/: timer.h
wolf3dredux_0.01/device/timer/unix/: unix_timer.c
wolf3dredux_0.01/device/timer/win32/: win_timer.c
wolf3dredux_0.01/extra_preprocessor_dumps/: MacPorts_clang_3.3_pretending_to_be_Microsoft.h  MacPorts_clang_5.0_pretending_to_be_Microsoft.h  README  ebg_my_preprocessor_defines_snowleopard_clang.h  ebg_my_preprocessor_defines_snowleopard_i386.h  ebg_my_preprocessor_defines_snowleopard_ppc.h  ebg_my_preprocessor_defines_snowleopard_ppc64.h
wolf3dredux_0.01/font/: font_manager.c  font_manager.h
wolf3dredux_0.01/game/: app_def.h
wolf3dredux_0.01/game/wolf3d/: wolf_local.h  wolf_main.c
wolf3dredux_0.01/game/wolf3d/client/: wolf_client.h  wolf_client_main.c  wolf_sv_ccmds.c
wolf3dredux_0.01/game/wolf3d/common/: wolf_common.c  wolf_common.h
wolf3dredux_0.01/game/wolf3d/entities/: wolf_act_stat.h  wolf_actor_ai.c  wolf_actor_ai.h  wolf_actors.c  wolf_actors.h  wolf_ai_com.c  wolf_ai_com.h  wolf_bj.c  wolf_bj.h  wolf_player.c  wolf_player.h  wolf_powerups.c  wolf_powerups.h  wolf_sprites.c  wolf_sprites.h  wolf_weapon.c
wolf3dredux_0.01/game/wolf3d/level/: wolf_areas.c  wolf_doors.c  wolf_level.c  wolf_level.h  wolf_pushwalls.c
wolf3dredux_0.01/game/wolf3d/math/: wolf_math.c  wolf_math.h
wolf3dredux_0.01/game/wolf3d/menu/: wolf_mcredits.c  wolf_menu.c  wolf_menu.h  wolf_mintermission.c  wolf_mintro.c  wolf_mnewgame.c  wolf_moptions.c  wolf_mquit.c  wolf_msound.c  wolf_mvideo.c
wolf3dredux_0.01/game/wolf3d/script/: episode.c  episode.h
wolf3dredux_0.01/game/wolf3d/video/: wolf_raycast.c  wolf_raycast.h  wolf_renderer.c  wolf_renderer.h
wolf3dredux_0.01/glxinfo_output/: TODO  ebg_my_glxinfo_limits_snowleopard.txt  ebg_my_glxinfo_snowleopard.txt  ebg_my_glxinfo_table_snowleopard.txt  ebg_my_glxinfo_verbose_snowleopard.txt
wolf3dredux_0.01/gnulib_replacement_funcs/: .gitignore  Makefile.am  Makefile.in  README  error.c  gettext.h  malloc.c  memcmp.c  msvc-inval.c  msvc-nothrow.c  stat-size.h  stat.c  strnlen.c  strnlen1.c  strnlen1.h  verify.h
wolf3dredux_0.01/loaders/: tga.c  tga.h  tga_minimal.h  tgaconfig.h  tgaread.c  tgawrite.c  wav.c  wav.h
wolf3dredux_0.01/lsfx/: .gitignore  TODO
wolf3dredux_0.01/m4/: binutils_warnings.m4  vorbis.m4  wchar_t.m4
wolf3dredux_0.01/math/: angle.c  angle.h  math.c  matrix.c  matrix.h  mymath.h  random_number.c  random_number.h  vector.c  vector.h
wolf3dredux_0.01/memory/: memory.c  memory.h  zmem.c  zmem.h
wolf3dredux_0.01/pics/: TODO
wolf3dredux_0.01/script/: TODO  script.c  script.h
wolf3dredux_0.01/sound/: sound.c  sound.h  sound_local.h  sound_sfx_id.c  sound_stream.c
wolf3dredux_0.01/sound/openal/: openal_binding.c  openal_binding.h  openal_main.c
wolf3dredux_0.01/sound/openal/AL/: alc.h  alctypes.h  aluttypes.h
wolf3dredux_0.01/string/: com_string.c  com_string.h
wolf3dredux_0.01/tools/: .gitignore
wolf3dredux_0.01/tools/gamepal/: gamepal.h  main.c
wolf3dredux_0.01/tools/signon/: .gitignore  WriteTGA_minimal.c  WriteTGA_minimal.h  main.c  wolf_pal.c
wolf3dredux_0.01/tools/wolfextractor/: .gitignore  Makefile.am  Makefile.in  hq2x.c  hq2x.h  main.c  makefile.clang  makefile.orig  pak.c  pak.h  vorbisenc_inter.c  vorbisenc_inter.h  wolfextractor.cbp  wolfextractor.h  wolfextractor.sln  wolfextractor.vcproj
wolf3dredux_0.01/tools/wolfextractor/Releasedir/: .gitignore
wolf3dredux_0.01/tools/wolfextractor/adlib/: adlib.c  adlib.h  fmopl.c  fmopl.h
wolf3dredux_0.01/tools/wolfextractor/base/: .gitignore
wolf3dredux_0.01/tools/wolfextractor/filesys/: file.c  file.h
wolf3dredux_0.01/tools/wolfextractor/loaders/: tga.c  tga.h  wav.c  wav.h
wolf3dredux_0.01/tools/wolfextractor/mac/: mac.c  mac.h
wolf3dredux_0.01/tools/wolfextractor/memory/: memory.c  memory.h
wolf3dredux_0.01/unix/: unix_main.c  unix_vid_sys.c
wolf3dredux_0.01/unix/clipboard/: OSXClipboard.h  OSXClipboard.m  X11Clipboard.c  X11Clipboard.h
wolf3dredux_0.01/video/: renderer.h  texture_manager.c  texture_manager.h  video.h
wolf3dredux_0.01/video/opengl/: myopengl.h  myopengl_extension.h  opengl_binding.c  opengl_binding.h  opengl_draw.c  opengl_extension.c  opengl_local.h  opengl_main.c  opengl_texture.c
wolf3dredux_0.01/win32/: vid_sys.c  win_def.h  win_main.c
wolf3dredux_0.01/zlib/: .gitignore  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  infback.c  inffast.c  inflate.c  minigzip.c  trees.c  uncompr.c  zlib.h  zutil.c  zutil.h
(+55 files in other folders)
